<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/find_username"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/favorite_page"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite_page"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting_page"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings_page"
        app:showAsAction="always"/>



</menu>