<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_item_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/avatar_image"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/iv_item_avatar"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/iv_item_avatar"
            card_view:layout_constraintTop_toTopOf="@+id/iv_item_avatar"
            tools:text="@string/user" />

        <TextView
            android:id="@+id/tv_usernameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/usernameTitle"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_usernameTitle"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_name"
            card_view:layout_constraintStart_toEndOf="@id/tv_usernameTitle"
            card_view:layout_constraintTop_toTopOf="@id/tv_usernameTitle"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_item_companyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/companyTitle"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@id/tv_usernameTitle" />

        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_item_companyTitle"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_name"
            card_view:layout_constraintStart_toEndOf="@id/tv_item_companyTitle"
            card_view:layout_constraintTop_toTopOf="@id/tv_item_companyTitle"
            tools:text="@string/company" />

        <TextView
            android:id="@+id/count_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/repository"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_avatar" />

        <TextView
            android:id="@+id/count_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/count_repository"
            android:layout_marginStart="32dp"
            android:text="@string/followings"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/count_repository"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_avatar" />

        <TextView
            android:id="@+id/count_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/count_following"
            android:layout_marginStart="8dp"
            android:text="@string/follower"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/count_following"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_avatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


